[package]
name = "sonja-hecs-schedule"
version = "0.6.2"
edition = "2021"
description = "Provides shedulable systems and parallel execution for hecs"
readme ="README.md"
license-file = "LICENSE"
authors = [ "Tei Roberts" ]
documentation = "https://docs.rs/hecs-schedule"
repository = "https://github.com/konceptosociala/despero-hecs-schedule"

[dependencies]
anyhow = "1.0.58"
atomic_refcell = "0.1.8"
hecs = { package = "sonja-hecs", git = "https://github.com/konceptosociala/sonja-hecs", features = [ "macros" ] }
rayon = { version = "1.5.3", optional = true }
smallvec = "1.9.0"
thiserror = "1.0.31"

[features]
default = [ "parallel" ]
parallel = [ "rayon" ]
